<resources>
    <string name="default_request_id">636131744128-cfejjhgiprp0rrdl9t8dqg815rqipd8i.apps.googleusercontent.com</string>
    <string name="id">Id</string>
    <string name="product_collection">shop-products</string>
    <string name="user_collection">users</string>
    <string name="transaction_collection">transactions</string>
    <string name="app_name">AndStore</string>
    <string name="nav_home">Home</string>
    <string name="nav_account">Profile</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_orders">Order</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_form">Email</string>
    <string name="password_form">Password</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_hint">Enter your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>