<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/black">

    <!-- Home Item -->
    <LinearLayout
        android:id="@+id/nav_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/icon_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nav_home"
            android:src="@drawable/home" />

        <TextView
            android:id="@+id/text_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_home"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <!-- Cart Item -->
    <LinearLayout
        android:id="@+id/nav_cart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/icon_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shopping_bag"
            android:contentDescription="@string/nav_cart" />

        <TextView
            android:id="@+id/text_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_cart"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <!-- Category Item -->
    <LinearLayout
        android:id="@+id/nav_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/icon_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/category"
            android:contentDescription="@string/nav_category" />

        <TextView
            android:id="@+id/text_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_category"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <!-- Profile/Account Item -->
    <LinearLayout
        android:id="@+id/nav_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/icon_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account_circle"
            android:contentDescription="@string/nav_home" />

        <TextView
            android:id="@+id/text_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_account"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>